package ar.edu.utn.frba.dds;

import java.math.BigDecimal;

public interface Estado {
  BigDecimal modificarPrecioBase(BigDecimal precioBase);
}
